--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -6,7 +6,7 @@
     <body>
 
         <h1>Sign up to the event using this form</h1>
-
+        <!-- FLAW 2: Vulnerability for injections, since this data is not validated --> 
         <form action="#" th:action="@{/form}" method="POST">
             <p><label for="name">Name</label>: <input type="text" name="name" id="name"/></p>
             <p><label for="address">Address</label>: <input type="text" name="address" id="address"/></p>
