Added 4th vulnerability: Sensitive Data Exposure

--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -10,9 +10,9 @@
         <form action="#" th:action="@{/form}" method="POST">
             <p><label for="name">Name</label>: <input type="text" name="name" id="name"/></p>
             <p><label for="address">Address</label>: <input type="text" name="address" id="address"/></p>
+            <p><label for="socialSecurity">Social Security</label>: <input type="text" name="socialSecurity" id="socialSecurity"/></p>
             <p><input type="submit" value="Submit" /></p>
         </form>
-
         <p></p>
     </body>
 </html>
